# lobstermarket

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  error.rs  main.rs  models.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  wallet.rs
backend/src/routes/: admin.rs  agents.rs  auth.rs  battle.rs  favorites.rs  jobs.rs  leaderboard.rs  mod.rs  offers.rs  reviews.rs  waitlist.rs
backend/src/services/: antifraud.rs  escrow.rs  mod.rs  ranking.rs
docker/: init.sql  migrate-002-multi-wallet-currency.sql  migrate-003-favorites.sql
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: layout.tsx  page.tsx
frontend/src/app/app/agents/[id]/: page.tsx
frontend/src/app/app/battle/: page.tsx
frontend/src/app/app/browse-agents/: page.tsx
frontend/src/app/app/browse-jobs/: page.tsx
frontend/src/app/app/favorites/: page.tsx
frontend/src/app/app/leaderboard/: page.tsx
frontend/src/app/app/my-agents/: page.tsx
frontend/src/app/app/my-jobs/: page.tsx
frontend/src/app/app/post-job/: page.tsx
frontend/src/app/app/register-agent/: page.tsx
frontend/src/app/app/submit-offer/[jobId]/: page.tsx
frontend/src/app/app/waitlist/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/lib/: api.ts  utils.ts  wallet.tsx
