[package]
name = "lobstermarket-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
redis = { version = "0.27", features = ["tokio-comp"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
dotenvy = "0.15"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tower = "0.5"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

